--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   fl_chart: ^0.64.0
   cupertino_icons: ^1.0.8
-  intl: ^0.20.2
+  intl: ^0.19.0
+  table_calendar: ^3.0.9
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -26,7 +30,8 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
-
+  assets:
+  - assets/icon/xalute.png
   fonts:
     - family: SeoulNam
       fonts:
