--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   intl: ^0.19.0
   table_calendar: ^3.0.9
   shared_preferences: ^2.2.2
+  path_provider: ^2.0.11
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
