--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ flutter:
   uses-material-design: true
   assets:
   - assets/icon/xalute.png
+  - assets/icon/profile.png
   fonts:
     - family: SeoulNam
       fonts:
