ECG Tab/Setting Design Version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xalute
 description: "Xalute platform"
-publish_to: 'none'
+publish_to: 'oslab'
 version: 1.0.0+1
 
 environment:
@@ -18,12 +18,21 @@ dependencies:
   shared_preferences: ^2.2.2
   path_provider: ^2.0.11
   provider: ^6.1.2
+  image_picker: ^1.0.4
+  flutter_native_splash: ^2.3.5
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/icon/xalute.png
+  android: true
+  ios: true
+  fullscreen: true
 
 flutter_launcher_icons:
   android: true
