--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image_picker: ^1.0.4
   flutter_native_splash: ^2.3.5
   lottie: ^2.4.0
+  flutter_date_pickers: ^0.4.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
